--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
     "mysql2-promise": "^0.1.4",
     "nodemon": "^3.0.1"
